--- a/.env
+++ b/.env
@@ -1,2 +1,10 @@
 AIRFLOW_UID=501
-_PIP_ADDITIONAL_REQUIREMENTS=ccxt
+_PIP_ADDITIONAL_REQUIREMENTS=
+_AIRFLOW_WWW_USER_USERNAME=airflow
+_AIRFLOW_WWW_USER_PASSWORD=password
+
+# Postgres environment variables
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=password
+POSTGRES_DB=market_data
+POSTGRES_HOST=postgres-data-storage
