--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -103,6 +103,23 @@ services:
       retries: 5
     restart: always
 
+  streamlit-dashboard:
+    build: ./docker/streamlit
+    ports:
+      - "8501:8501"
+    healthcheck:
+      test: [ "CMD", "curl", "--fail", "http://localhost:8501/_stcore/health" ]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 30s
+    restart: always
+    environment:
+      <<: *airflow-common-env
+    depends_on:
+      postgres-data-storage:
+        condition: service_healthy
+
   postgres-airflow:
     image: postgres:16
     environment:
